# random_coffee_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  random_coffee.db
alembic/: env.py
alembic/versions/: 51089e76be28_initial_tables.py
shared/: db_helper.py  logger.py
src/: __init__.py  config.py  main.py
src/adapter/database/: __init__.py  connection.py  pair.py  participant.py  poll_mapping.py
src/adapter/telegram/: __init__.py  connection.py  routes.py
src/controller/: scheduler.py  telegram_callback.py
src/model/: __init__.py  base.py  pair.py  participant.py  poll_mapping.py
src/usecase/: __init__.py  create_pairs.py  handle_quiz_answer.py  send_quiz.py
