[project]
name = "random-coffee-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "apscheduler>=3.11.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.44",
]

[tool.ruff]
line-length = 100

